force-app/main/default/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Couleur_Pr_f_r__c</fullName>
        <label>Couleur Préféré</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bleu</fullName>
                </value>
                <value>
                    <fullName>Jaune</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Rouge</fullName>
                </value>
                <value>
                    <fullName>Vert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facturation_Annuelle__c</fullName>
        <formula>Nbr_Jours_Annuel__c * Tarif_Jour_HT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facturation Annuelle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Libre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nbr_Jours_Annuel__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Nbr Jours Annuel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Rating__c</fullName>
        <description>Indicates how closely a candidate fits the position apply to.</description>
        <inlineHelpText>How well Does this candidate fit the job description?</inlineHelpText>
        <label>Prospect Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warn</fullName>
                </value>
                <value>
                    <fullName>Cool</fullName>
                </value>
                <value>
                    <fullName>Manager Favorite</fullName>
                    <color>#FF0000</color>
                    <label>Manager Favorite</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tarif_Jour_HT__c</fullName>
        <label>Tarif Jour HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Candidate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Facturation_Annuelle__c</columns>
        <columns>Tarif_Jour_HT__c</columns>
        <columns>Couleur_Pr_f_r__c</columns>
        <columns>Libre__c</columns>
        <columns>project_mse__Geo__Latitude__s</columns>
        <columns>project_mse__Geo__Longitude__s</columns>
        <columns>Nbr_Jours_Annuel__c</columns>
        <columns>Prospect_Rating__c</columns>
        <columns>User_Candidate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom du Candidates</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Nbj_inf_210_Factu_inf_900</fullName>
        <active>false</active>
        <errorConditionFormula>OR (Nbr_Jours_Annuel__c &gt; 210,  Tarif_Jour_HT__c &gt; 900)</errorConditionFormula>
        <errorMessage>Le nombre de jour annuel ne peut être supérieur à 210 et la facturation journalière à 900 euros HT.</errorMessage>
    </validationRules>
</CustomObject>